deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend-deployment
spec:
  selector:
    matchLabels:
      app: krakend
  replicas: 1
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
      - name: krakend
        image: krakend:latest
        imagePullPolicy: IfNotPresent
