service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
spec:
  selector:
    app: krakend
  ports:
    - protocol: TCP
      port: 80
      name: "http"
      targetPort: 8080
